Fixed overlaps in Playlist

--- a/public/css/playlist.css
+++ b/public/css/playlist.css
@@ -5,9 +5,8 @@
 }
 
 .thumbnail {
-	height: 90px;
-	width: 140px;
-	border: 2px;
+	height: 80px;
+	width: 125px;
 }
 
 hr {
